--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^4.6.2",
     "jquery": "^3.5.1",
+    "ng2-charts": "^5.0.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
